Add maxlength on recipe,ingredient and prepared recipe names

--- a/Cookbook/Cookbook.WebApplication/Views/Ingredient/Index.cshtml
+++ b/Cookbook/Cookbook.WebApplication/Views/Ingredient/Index.cshtml
@@ -64,7 +64,7 @@
                     <div class="form-group ingredient-main-container">
                         <label for="ingredient-name">Ingredient Name</label>
                         <div class="ingredients-container">
-                            <input class="form-control ingredient-name col-sm-9 ingredient-name" type="text"> <button class="btn btn-primary col-sm-2 float-right add-more-ingredient">+</button>
+                            <input class="form-control ingredient-name col-sm-9 ingredient-name" type="text" maxlength="25"> <button class="btn btn-primary col-sm-2 float-right add-more-ingredient">+</button>
                         </div>
 
                     </div>
