--- a/Cookbook/Cookbook.WebApplication/Views/Recipe/Create.cshtml
+++ b/Cookbook/Cookbook.WebApplication/Views/Recipe/Create.cshtml
@@ -21,11 +21,11 @@
     <form>
         <div class="form-group">
             <label for="recipe-name">Recipe Name</label>
-            <input class="form-control" type="text" id="recipe-name">
+            <input class="form-control" type="text" id="recipe-name" maxlength="25">
         </div>
         <div class="form-group">
             <label for="recipe-description">Recipe Description</label>
-            <textarea class="form-control" id="recipe-description" rows="3"></textarea>
+            <textarea class="form-control" id="recipe-description" rows="3" maxlength="250"></textarea>
         </div>
         <div class="card">
             
