--- a/Cookbook/Cookbook.WebApplication/Views/Recipe/Prepare.cshtml
+++ b/Cookbook/Cookbook.WebApplication/Views/Recipe/Prepare.cshtml
@@ -22,7 +22,7 @@
     <form>
         <div class="form-group">
             <label for="recipe-name">Name your masterpiece!</label>
-            <input class="form-control" type="text" id="recipe-name">
+            <input class="form-control" type="text" id="recipe-name" maxlength="25">
         </div>
         <div class="card">
             <div class="card-body">
