Include Viewing of Prepared Recipes and CRUD validation

--- a/Cookbook/Cookbook.WebApplication/Views/Ingredient/Index.cshtml
+++ b/Cookbook/Cookbook.WebApplication/Views/Ingredient/Index.cshtml
@@ -78,4 +78,11 @@
     </div>
 </script>
 
+<script id="error-template" type="text/x-handlebars-template">
+    <div class="error-message-container">
+        <div class="alert alert-danger error-message" role="alert">
+            Something went wrong. Please try again.
+        </div>
+    </div>
+</script>
 <script src="~/js/ingredient.js" asp-append-version="true"></script>
