move out add new ingredient button

--- a/Cookbook/Cookbook.WebApplication/Views/Recipe/Create.cshtml
+++ b/Cookbook/Cookbook.WebApplication/Views/Recipe/Create.cshtml
@@ -47,8 +47,10 @@
 
 <script id="ingredients-list-panel-template" type="text/x-handlebars-template">
     <h5 class="card-title">Available Ingredients</h5>
-    <div class="list-group" id="ingredients-list-panel">
+    <div class="list-group">
         <button type="button" class="list-group-item list-group-item-action active add-ingredient"> Add ingredient </button>
+    </div>
+    <div class="list-group" id="ingredients-list-panel">
     </div>
 </script>
 
